; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_pc87427.c_set_fan_min.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_pc87427.c_set_fan_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.pc87427_data = type { i32*, i32, i32* }
%struct.sensor_device_attribute = type { i32 }

@LD_FAN = common dso_local global i64 0, align 8
@PC87427_REG_BANK = common dso_local global i64 0, align 8
@PC87427_REG_FAN_STATUS = common dso_local global i64 0, align 8
@PC87427_REG_FAN_MIN = common dso_local global i64 0, align 8
@FAN_STATUS_MONEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @set_fan_min to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @set_fan_min(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.pc87427_data*, align 8
  %10 = alloca %struct.sensor_device_attribute*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %14 = load %struct.device*, %struct.device** %5, align 8
  %15 = call %struct.pc87427_data* @dev_get_drvdata(%struct.device* %14)
  store %struct.pc87427_data* %15, %struct.pc87427_data** %9, align 8
  %16 = load %struct.device_attribute*, %struct.device_attribute** %6, align 8
  %17 = call %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute* %16)
  store %struct.sensor_device_attribute* %17, %struct.sensor_device_attribute** %10, align 8
  %18 = load %struct.sensor_device_attribute*, %struct.sensor_device_attribute** %10, align 8
  %19 = getelementptr inbounds %struct.sensor_device_attribute, %struct.sensor_device_attribute* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %11, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = call i64 @simple_strtoul(i8* %21, i32* null, i32 10)
  store i64 %22, i64* %12, align 8
  %23 = load %struct.pc87427_data*, %struct.pc87427_data** %9, align 8
  %24 = getelementptr inbounds %struct.pc87427_data, %struct.pc87427_data* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* @LD_FAN, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %13, align 4
  %29 = load %struct.pc87427_data*, %struct.pc87427_data** %9, align 8
  %30 = getelementptr inbounds %struct.pc87427_data, %struct.pc87427_data* %29, i32 0, i32 1
  %31 = call i32 @mutex_lock(i32* %30)
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @BANK_FM(i32 %32)
  %34 = load i32, i32* %13, align 4
  %35 = sext i32 %34 to i64
  %36 = load i64, i64* @PC87427_REG_BANK, align 8
  %37 = add nsw i64 %35, %36
  %38 = call i32 @outb(i32 %33, i64 %37)
  %39 = load i32, i32* %13, align 4
  %40 = sext i32 %39 to i64
  %41 = load i64, i64* @PC87427_REG_FAN_STATUS, align 8
  %42 = add nsw i64 %40, %41
  %43 = call i32 @outb(i32 0, i64 %42)
  %44 = load i64, i64* %12, align 8
  %45 = call i32 @fan_to_reg(i64 %44)
  %46 = load %struct.pc87427_data*, %struct.pc87427_data** %9, align 8
  %47 = getelementptr inbounds %struct.pc87427_data, %struct.pc87427_data* %46, i32 0, i32 2
  %48 = load i32*, i32** %47, align 8
  %49 = load i32, i32* %11, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds i32, i32* %48, i64 %50
  store i32 %45, i32* %51, align 4
  %52 = load %struct.pc87427_data*, %struct.pc87427_data** %9, align 8
  %53 = getelementptr inbounds %struct.pc87427_data, %struct.pc87427_data* %52, i32 0, i32 2
  %54 = load i32*, i32** %53, align 8
  %55 = load i32, i32* %11, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i32, i32* %54, i64 %56
  %58 = load i32, i32* %57, align 4
  %59 = load i32, i32* %13, align 4
  %60 = sext i32 %59 to i64
  %61 = load i64, i64* @PC87427_REG_FAN_MIN, align 8
  %62 = add nsw i64 %60, %61
  %63 = call i32 @outw(i32 %58, i64 %62)
  %64 = load i32, i32* @FAN_STATUS_MONEN, align 4
  %65 = load i32, i32* %13, align 4
  %66 = sext i32 %65 to i64
  %67 = load i64, i64* @PC87427_REG_FAN_STATUS, align 8
  %68 = add nsw i64 %66, %67
  %69 = call i32 @outb(i32 %64, i64 %68)
  %70 = load %struct.pc87427_data*, %struct.pc87427_data** %9, align 8
  %71 = getelementptr inbounds %struct.pc87427_data, %struct.pc87427_data* %70, i32 0, i32 1
  %72 = call i32 @mutex_unlock(i32* %71)
  %73 = load i64, i64* %8, align 8
  ret i64 %73
}

declare dso_local %struct.pc87427_data* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute*) #1

declare dso_local i64 @simple_strtoul(i8*, i32*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @BANK_FM(i32) #1

declare dso_local i32 @fan_to_reg(i64) #1

declare dso_local i32 @outw(i32, i64) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
